# arcane-insight

./: .gitignore  README.md  cdc.py  config.py  config.yaml  elt.sh  external_models.yaml  pyproject.toml
.dlt/: config.toml
.github/workflows/: sqlmesh.yml
.sqlmesh/: config.yaml
data/: hook.yml
dlt/: rest_api_pipeline.py
dlt/pipelines/: battle_net.py
macros/: create_parquet.py  data_vault.py  generate_hook_key.py  generate_surrogate_key.py  star_v2.py
macros/data_vault/: data_vault__staging.py
models/: incremental__dlt_loads.sql  incremental_raw_hearthstone_cards.sql  incremental_raw_hearthstone_cards__child_ids.sql  incremental_raw_hearthstone_cards__keyword_ids.sql  incremental_raw_hearthstone_cards__multi_class_ids.sql  incremental_raw_hearthstone_cards__multi_type_ids.sql  incremental_raw_hearthstone_classes.sql  incremental_raw_hearthstone_classes__alternate_hero_card_ids.sql  incremental_raw_hearthstone_keywords.sql  incremental_raw_hearthstone_keywords__game_modes.sql  incremental_raw_hearthstone_minion_types.sql  incremental_raw_hearthstone_minion_types__game_modes.sql  incremental_raw_hearthstone_rarities.sql  incremental_raw_hearthstone_rarities__crafting_cost.sql  incremental_raw_hearthstone_rarities__dust_value.sql  incremental_raw_hearthstone_set_groups.sql  incremental_raw_hearthstone_set_groups__card_sets.sql  incremental_raw_hearthstone_sets.sql  incremental_raw_hearthstone_sets__alias_set_ids.sql  incremental_raw_hearthstone_types.sql  incremental_raw_hearthstone_types__game_modes.sql
models/bronze/: incremental__dlt_loads.sql  incremental_raw_hearthstone_cards__keyword_ids.sql  incremental_raw_hearthstone_cards__multi_class_ids.sql  incremental_raw_hearthstone_cards__multi_type_ids.sql  incremental_raw_hearthstone_classes.sql  incremental_raw_hearthstone_keywords.sql  incremental_raw_hearthstone_minion_types.sql  incremental_raw_hearthstone_minion_types__game_modes.sql  incremental_raw_hearthstone_rarities.sql  incremental_raw_hearthstone_rarities__crafting_cost.sql  incremental_raw_hearthstone_rarities__dust_value.sql  incremental_raw_hearthstone_set_groups__card_sets.sql  incremental_raw_hearthstone_sets__alias_set_ids.sql  incremental_raw_hearthstone_types__game_modes.sql  raw__hearthstone__cardbacks.py  raw__hearthstone__cards.py  raw__hearthstone__cards.sql  raw__hearthstone__cards__child_ids.sql  raw__hearthstone__cards__keyword_ids.sql  raw__hearthstone__cards__multi_class_ids.sql  raw__hearthstone__cards__multi_type_ids.sql  raw__hearthstone__classes.py  raw__hearthstone__classes.sql  raw__hearthstone__classes__alternate_hero_card_ids.sql  raw__hearthstone__keywords.py  raw__hearthstone__keywords.sql  raw__hearthstone__keywords__game_modes.sql  raw__hearthstone__minion_types.py  raw__hearthstone__minion_types.sql  raw__hearthstone__minion_types__game_modes.sql  raw__hearthstone__rarities.py  raw__hearthstone__rarities.sql  raw__hearthstone__rarities__crafting_cost.sql  (+32 more)
pipelines/: battle_net.py
(+135 files in other folders)
