[tool.poetry]
name = "arcane-insight"
version = "0.1.0"
description = "Arcane Insight is a data analytics project designed to harness the power of SQLMesh & DuckDB to collect, transform, and analyze data from Blizzard’s Hearthstone API. Focused on card statistics and attributes, this project reveals detailed insights into card mechanics, strengths, and trends to support BI and strategic analysis."
authors = ["Mattias Thalén <bitter-polders0x@icloud.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
sqlmesh = {version = ">=0.137.0", extras = ["github", "web"]}
duckcli = "^0.2.1"

[tool.poetry.group.dev.dependencies]
python = ">=3.12,<3.13"
sqlmesh = {version = ">=0.137.0", extras = ["github", "web"]}
duckcli = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
